# raylib

./: .editorconfig  CMakeLists.txt  README.md
scripts/: build.sh  run.sh  setup.sh
src/: main.c
